--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "data"]
 	path = data
 	url = https://github.com/muradhani/data
+[submodule "domain"]
+	path = domain
+	url = https://github.com/muradhani/domian
